--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -7,35 +7,35 @@
 	// PT Board 1
 
 	"pt1.ptValue0": "ethaneFillPT",
-	"pt1.ptValue1@rtd": "ethaneTankRTD",
+	"pt1.ptValue1": "nitrousFillPT",
 	"pt1.ptValue2": "ethaneTankPT", 
-	"pt1.ptValue3": "nitrousFillPT", 
-	"pt1.ptValue4@rtd": "nitrousTankRTD", 
-	"pt1.ptValue5": "nitrousTankPT",
+	"pt1.ptValue3": "nitrousTankPT", 
+	"pt1.ptValue4": "", 
+	"pt1.ptValue5": "",
 	"pt1.ptValue6": "",
 	"pt1.ptValue7": "",
 
 	// PT Board 2
 
-	"pt2.ptValue0@rtd": "nitrousLineRTD0",
-	"pt2.ptValue1@rtd": "nitrousLineRTD1",
-	"pt2.ptValue2@rtd": "nitrousLineRTD2",
-	"pt2.ptValue3@rtd": "ethaneLineRTD0",
-	"pt2.ptValue4@rtd": "ethaneLineRTD1",
-	"pt2.ptValue5@rtd": "ethaneLineRTD2",
-	"pt2.ptValue6@rtd": "",
-	"pt2.ptValue7@rtd": "",
+	"pt2.ptValue0": "nitrousInjectorPT",
+	"pt2.ptValue1": "ethaneInjectorPT",
+	"pt2.ptValue2": "chamberPT",
+	"pt2.ptValue3": "manifoldPT",
+	"pt2.ptValue4": "channelPT0",
+	"pt2.ptValue5": "channelPT1",
+	"pt2.ptValue6": "channelPT2",
+	"pt2.ptValue7": "channelPT3",
 
 	// PT Board 3
 
-	"pt3.ptValue0": "nitrousInjectorPT",
-	"pt3.ptValue1": "ethaneInjectorPT",
-	"pt3.ptValue2": "chamberPT",
-	"pt3.ptValue3": "manifoldPT",
-	"pt3.ptValue4": "channelPT0",
-	"pt3.ptValue5": "channelPT1",
-	"pt3.ptValue6": "channelPT2",
-	"pt3.ptValue7": "channelPT3",
+	"pt3.ptValue0@rtd": "nitrousLineRTD0",
+	"pt3.ptValue1@rtd": "nitrousLineRTD1",
+	"pt3.ptValue2@rtd": "nitrousLineRTD2",
+	"pt3.ptValue3@rtd": "ethaneLineRTD0",
+	"pt3.ptValue4@rtd": "ethaneLineRTD1",
+	"pt3.ptValue5@rtd": "ethaneLineRTD2",
+	"pt3.ptValue6@rtd": "",
+	"pt3.ptValue7@rtd": "",
 
 	// LC Board 1
 
