--- a/config/hotfire_pressures_window.jsonc
+++ b/config/hotfire_pressures_window.jsonc
@@ -5,114 +5,79 @@
 	// "pt1.ptValue3": "nitrousFillPT", 
 	// "pt1.ptValue4@rtd": "nitrousTankRTD", 
 	// "pt1.ptValue5": "nitrousTankPT",
-	"name": "Hotfire Pressures",
+	"name": "Coldflow Pressures",
 	"layout": "9-grid",
 	"slots": [
 		{
 			"type": "graph",
 			"values": [
 				{
-					"field": "pt1.ptValue5",
+					"field": "pt1.ptValue3",
 					"name": "Nitrous Tank PT",
 					"units": "PSI",
 					"color": [255, 0, 0]
 				}
-			]
-		}, 
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "pt1.ptValue2",
-					"name": "Ethane Tank PT",
-					"units": "PSI",
-					"color": [255, 0, 0]
-				}
-			]
-		}, 
-		{
-			"type": "six-square",
-			"values": [
-				{
-					"field": "pt1.ptValue5@roc",
-					"name": "Nitrous Tank ROC",
-					"units": "PSI/s"
-				},
-				{
-					"field": "pt1.ptValue2roc",
-					"name": "Ethane Tank ROC",
-					"units": "PSI/s"
-				},
-				{
-					"field": null
-				},
-				{
-					"field": "pt1.ptValue5",
-					"name": "Nitrous Tank PT",
-					"units": "PSI"
-				},
-				{
-					"field": "pt1.ptValue2",
-					"name": "Ethane Tank PT",
-					"units": "PSI"
-				}
-			]
-		}, 
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "pt3.ptValue0",
-					"name": "Nitrous Injector PT",
-					"units": "PSI",
-					"color": [132, 146, 179]
-				}, 
-				{
-					"field": "pt3.ptValue1",
-					"name": "Ethane Injector PT",
-					"units": "PSI",
-					"color": [12, 173, 8]
-				}
-			]
-		}, 
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "pt3.ptValue2",
-					"name": "Chamber PT",
-					"units": "PSI",
-					"color": [123, 123, 123]
-				}
+		
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
 				{
-					"field": "pt3.ptValue4",
-					"name": "Channel 0 PT",
+					"field": "pt1.ptValue2",
+					"name": "Ethane Tank PT",
 					"units": "PSI",
-					"color": [0, 0, 150]
-				},
-				{
-					"field": "pt3.ptValue5",
-					"name": "Channel 1 PT",
-					"units": "PSI",
-					"color": [150, 0, 0]
-				},
-				{
-					"field": "pt3.ptValue6",
-					"name": "Channel 2 PT",
-					"units": "PSI",
-					"color": [0, 150, 0]
-				},
-				{
-					"field": "pt3.ptValue7",
-					"name": "Channel 3 PT",
-					"units": "PSI",
-					"color": [150, 50, 150]
+					"color": [0, 255, 0]
 				}
+		
+			]
+		},
+		{
+			"type": "six-square",
+			"values": [
+				{
+					"field": "pt1.ptValue3@roc", //don't know if works yet 
+					"name": "Nitrous Tank roc",
+					"units": "PSI/s"
+				},
+				{
+					"field": "pt1.ptValue2@roc", //same
+					"name": "Ethane Tank roc",
+					"units": "PSI/s"
+				},
+				{
+					"field": null 
+					
+				},
+				{
+					"field": "pt1.ptValue3", 
+					"name": "Nitrous Tank PT",
+					"units": "PSI"
+				},
+				{
+					"field": "pt1.ptValue2", 
+					"name": "Ethane Tank PT",
+					"units": "PSI"
+				}
+				
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "pt2.ptValue0",
+					"name": "Nitrous Injector PT",
+					"units": "PSI",
+					"color": [255, 0, 0]
+				},
+				{
+					"field": "pt2.ptValue1",
+					"name": "Ethane Injector PT",
+					"units": "PSI",
+					"color": [0, 255, 0]
+				}
+		
 			]
 		},
 		{
@@ -120,10 +85,65 @@
 			"values": [
 				{
 					"field": "pt2.ptValue2",
-					"name": "Nitrous Fill Line",
+					"name": "Chamber PT",
 					"units": "PSI",
-					"color": [250, 200, 213]
+					"color": [0, 0, 255]
 				}
+		
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "pt2.ptValue4",
+					"name": "Channel PT0",
+					"units": "PSI",
+					"color": [255, 0, 0]
+				},
+				{
+					"field": "pt2.ptValue5",
+					"name": "Channel PT1",
+					"units": "PSI",
+					"color": [0, 255, 0]
+				},
+				{
+					"field": "pt2.ptValue6",
+					"name": "Channel PT2",
+					"units": "PSI",
+					"color": [0, 0, 255]
+				},
+				{
+					"field": "pt2.ptValue7",
+					"name": "Channel PT3",
+					"units": "PSI",
+					"color": [0, 255, 255]
+				}
+		
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "pt1.ptValue1",
+					"name": "Nitrous Fill Line PT",
+					"units": "PSI",
+					"color": [255, 0, 0]
+				}
+		
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				{
+					"field": "pt1.ptValue0",
+					"name": "Ethane Fill Line PT",
+					"units": "PSI",
+					"color": [255, 0, 0]
+				}
+		
 			]
 		},
 		{
@@ -131,22 +151,13 @@
 			"values": [
 				{
 					"field": "pt2.ptValue3",
-					"name": "Ethane Fill Line",
-					"units": "PSI",
-					"color": [250, 21, 84]
-				}
-			]
-		},
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "pt3.ptValue3",
 					"name": "Manifold PT",
 					"units": "PSI",
-					"color": [250, 240, 0]
+					"color": [255, 0, 0]
 				}
+		
 			]
 		}
+		
 	]
 }
