--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -102,7 +102,7 @@
 	"ac2.actuatorState0": "nitrousGemsState",
 	"ac2.actuatorState1": "nitrousFillState",
 	"ac2.actuatorState2": "nitrousVentState",
-	"ac2.actuatorState3": "nitrousFillVentState",
+	"ac2.actuatorState3": "nitrousLineVentState",
 	"ac2.actuatorState4": "nitrousEmergencyVentState",
 	"ac2.actuatorState5": "nitrousDrainState",
 	"ac2.actuatorState6": "",
@@ -111,7 +111,7 @@
 	"ac2.actuatorContinuity0": "nitrousGemsContinuity",
 	"ac2.actuatorContinuity1": "nitrousFillContinuity",
 	"ac2.actuatorContinuity2": "nitrousVentContinuity", 
-	"ac2.actuatorContinuity3": "nitrousFillVentContinuity",
+	"ac2.actuatorContinuity3": "nitrousLineVentContinuity",
 	"ac2.actuatorContinuity4": "nitrousEmergencyVentContinuity",
 	"ac2.actuatorContinuity5": "nitrousDrainContinuity",
 	"ac2.actuatorContinuity6": "",
@@ -119,8 +119,8 @@
 
 	"ac2.actuatorCurrent0": "nitrousGemsCurrent",
 	"ac2.actuatorCurrent1": "nitrousFillCurrent",
-	"ac2.actuatorCurrent2": "nitrousEmergencyVentCurrent", 
-	"ac2.actuatorCurrent3": "nitrousFillVentCurrent",
+	"ac2.actuatorCurrent2": "nitrousVentCurrent", 
+	"ac2.actuatorCurrent3": "nitrousLineVentCurrent",
 	"ac2.actuatorCurrent4": "nitrousEmergencyVentCurrent",
 	"ac2.actuatorCurrent5": "nitrousDrainCurrent",
 	"ac2.actuatorCurrent6": "",
@@ -129,7 +129,7 @@
 	"ac2.potentiometer0": "",
 	"ac2.potentiometer1": "nitrousFillPot",
 	"ac2.potentiometer2": "", 
-	"ac2.potentiometer3": "nitrousFillVentPot",
+	"ac2.potentiometer3": "nitrousLineVentPot",
 	"ac2.potentiometer4": "",
 	"ac2.potentiometer5": "",
 	"ac2.potentiometer6": "",
@@ -144,7 +144,7 @@
 	"ac3.actuatorState0": "ethaneGemsState",
 	"ac3.actuatorState1": "ethaneFillState",
 	"ac3.actuatorState2": "ethaneVentState",
-	"ac3.actuatorState3": "ethaneFillVentState",
+	"ac3.actuatorState3": "ethaneLineVentState",
 	"ac3.actuatorState4": "ethaneEmergencyVentState",
 	"ac3.actuatorState5": "ethaneDrainState",
 	"ac3.actuatorState6": "",
@@ -153,7 +153,7 @@
 	"ac3.actuatorContinuity0": "ethaneGemsContinuity",
 	"ac3.actuatorContinuity1": "ethaneFillContinuity",
 	"ac3.actuatorContinuity2": "ethaneVentContinuity", 
-	"ac3.actuatorContinuity3": "ethaneFillVentContinuity",
+	"ac3.actuatorContinuity3": "ethaneLineVentContinuity",
 	"ac3.actuatorContinuity4": "ethaneEmergencyVentContinuity",
 	"ac3.actuatorContinuity5": "ethaneDrainContinuity",
 	"ac3.actuatorContinuity6": "",
@@ -161,8 +161,8 @@
 
 	"ac3.actuatorCurrent0": "ethaneGemsCurrent",
 	"ac3.actuatorCurrent1": "ethaneFillCurrent",
-	"ac3.actuatorCurrent2": "ethaneEmergencyVentCurrent", 
-	"ac3.actuatorCurrent3": "ethaneFillVentCurrent",
+	"ac3.actuatorCurrent2": "ethaneVentCurrent", 
+	"ac3.actuatorCurrent3": "ethaneLineVentCurrent",
 	"ac3.actuatorCurrent4": "ethaneEmergencyVentCurrent",
 	"ac3.actuatorCurrent5": "ethaneDrainCurrent",
 	"ac3.actuatorCurrent6": "",
@@ -171,7 +171,7 @@
 	"ac3.potentiometer0": "",
 	"ac3.potentiometer1": "ethaneFillPot",
 	"ac3.potentiometer2": "", 
-	"ac3.potentiometer3": "ethaneFillVentPot",
+	"ac3.potentiometer3": "ethaneLineVentPot",
 	"ac3.potentiometer4": "",
 	"ac3.potentiometer5": "",
 	"ac3.potentiometer6": "",
