--- a/config/propellant_fill_window.jsonc
+++ b/config/propellant_fill_window.jsonc
@@ -172,14 +172,14 @@
 					"field": "",
 					"actions": {
 						"lox-timed": {
-							"type": "zero",
+							"type": "signal-timed",
 							"board": "ac2",
-							"packet": 123
+							"packet": 124
 						},
 						"fuel-timed": {
-							"type": "zero",
+							"type": "signal-timed",
 							"board": "ac3",
-							"packet": 123
+							"packet": 124
 						}
 					},
 					"safe": true
